--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Waste Reducion</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./Assets/index.style.css">
 </head>
 
 <body>
     <div class="main">
         <!--------------------- Navbar --------------------->
         <header class="container">
-            <a href="/index.html" class="header-logo">
-                <img src="./img/logo.png" alt="Website-Logo">
+            <a href="./index.html" class="header-logo">
+                <img src="./Assets/Images/logo.png" alt="Website-Logo">
             </a>
             <nav class="navbar">
                 <ul class="navlist open">
