--- a/Assets/about.html
+++ b/Assets/about.html
@@ -12,34 +12,45 @@
         />
         <!-- External CSS -->
         <link rel="stylesheet" href="../Assets/about.style.css" />
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter&family=Jomhuria&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <!----------- 
         ---NAV Bar---
         ------------>
         <nav>
-            <a href="#">
-                <img
-                    class="nav-logo"
-                    src="../Assets/Images/logo.png"
-                    alt="logo.png"
-                />
-            </a>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Donations</a></li>
-                <li><a href="#">Volunteers</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li>
-                    <a href="#">
-                        <img
-                            src="../Assets/Images/Vector.png"
-                            alt="Vector.png"
-                        />
-                    </a>
-                </li>
-            </ul>
+            <main>
+                <a href="../index.html">
+                    <img
+                        class="nav-logo"
+                        src="../Assets/Images/logo.png"
+                        alt="logo.png"
+                    />
+                </a>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="#">Donations</a></li>
+                    <li><a href="#">Volunteers</a></li>
+                    <li>
+                        <a id="active" href="../Assets/about.html">About Us</a>
+                    </li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li>
+                        <a href="#">
+                            <img
+                                src="../Assets/Images/Vector.png"
+                                alt="Vector.png"
+                            />
+                        </a>
+                    </li>
+                </ul>
+            </main>
         </nav>
         <!-----------------
         --- Our Mission ---
@@ -47,9 +58,25 @@
         <section class="mission">
             <main>
                 <h1>Our Mission:</h1>
-                <div class="mission-main">
+                <div class="mission-card">
                     <img src="../Assets/Images/mission.jpg" alt="mission.jpg" />
-                    <p></p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Commodi laudantium officiis aliquam vel nam, distinctio
+                        eum blanditiis at quibusdam quis fugiat illo cupiditate
+                        nemo placeat iure necessitatibus maxime nihil unde dicta
+                        magni voluptate sapiente nostrum. Quam incidunt
+                        voluptatem magni deleniti. Consequatur dignissimos
+                        maiores minus repellendus maxime aspernatur
+                        reprehenderit temporibus aliquam molestias. Libero
+                        laborum nam quia delectus facilis, quidem vero! Officia
+                        ipsa mollitia qui hic voluptatem quia. Harum, quam
+                        velit. Saepe nulla, veritatis aliquid nemo ratione
+                        officia quam itaque dolorum magnam reprehenderit,
+                        expedita aperiam. Culpa libero sint, ratione quam
+                        corrupti ad, nobis quibusdam distinctio a debitis beatae
+                        repellendus maxime amet blanditiis.
+                    </p>
                 </div>
             </main>
         </section>
@@ -59,8 +86,23 @@
         <section class="history">
             <main>
                 <h1>Our History:</h1>
-                <div class="history-main">
-                    <p></p>
+                <div class="history-card">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Commodi error consectetur vitae consequatur. Consectetur
+                        possimus alias numquam obcaecati sapiente commodi veniam
+                        id laboriosam officia voluptate adipisci sint neque
+                        nemo, aperiam delectus perferendis, voluptatibus aliquid
+                        saepe inventore. Id, impedit? Rem eum, nobis in magnam
+                        quae incidunt similique sapiente obcaecati, et optio,
+                        excepturi repudiandae! Reiciendis incidunt aspernatur ut
+                        aperiam quisquam modi ipsum nulla dicta fugiat, sunt,
+                        culpa distinctio a ad itaque consequuntur quia earum
+                        natus? Vitae autem corporis enim, modi repellendus
+                        voluptatibus illum fuga aliquid dolorem ipsum recusandae
+                        magnam id et officiis in atque ex deserunt maxime
+                        laboriosam soluta perspiciatis ducimus odio?
+                    </p>
                     <img src="../Assets/Images/history.jpg" alt="history.jpg" />
                 </div>
             </main>
@@ -68,5 +110,6 @@
         <!------------
         --- Footer ---
         ------------->
+        <footer></footer>
     </body>
 </html>
