nav bar updated

--- a/index.html
+++ b/index.html
@@ -11,19 +11,34 @@
 <body>
     <div class="main">
         <!--------------------- Navbar --------------------->
-        <header class="container">
-            <a href="./index.html" class="header-logo">
-                <img src="./Assets/Images/logo.png" alt="Website-Logo">
-            </a>
-            <nav class="navbar">
-                <ul class="navlist open">
-                    <li><a href="#home" class="active">Home</a></li>
-                    <li><a href="">Donations</a></li>
-                    <li><a href="">Volunteers</a></li>
-                    <li><a href="">About us</a></li>
+        <nav>
+            <main>
+                <a href="../index.html">
+                    <img
+                        class="nav-logo"
+                        src="../Assets/Images/logo.png"
+                        alt="logo.png"
+                    />
+                </a>
+                <ul>
+                    <li><a  id="active" href="../index.html">Home</a></li>
+                    <li><a href="#">Donations</a></li>
+                    <li><a href="#">Volunteers</a></li>
+                    <li>
+                        <a href="../Assets/about.html">About Us</a>
+                    </li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li>
+                        <a href="#">
+                            <img
+                                src="../Assets/Images/Vector.png"
+                                alt="Vector.png"
+                            />
+                        </a>
+                    </li>
                 </ul>
-            </nav>
-        </header>
+            </main>
+        </nav>
 
         <!--------------------- Main Content --------------------->
         <div class="home-content">
